<resources>
    <string name="app_name">Smart Wallet</string>


    <!-- Drawer menu-->
    <string-array name="drawer_menu">
        <item>Dashboard</item>
        <item>Budget</item>
        <item>Goals</item>
        <item>Charts</item>
        <item>Bank integration</item>
        <item>History</item>

        <item>Recommend to friend</item>


        <item>My categories</item>
        <item>Manage wallets</item>
        <item>Settings</item>
        <item>Sign out</item>

    </string-array>

    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title_activity_report">Report</string>
    <string name="done">Done</string>
    <string name="salary">Salary</string>
    <string name="rental_income">Rental income</string>
    <string name="interest">Interest</string>
    <string name="gifts">Gifts</string>
    <string name="other_income">Other income</string>
    <string name="taxes">Taxes</string>
    <string name="mortgage">Mortgage</string>
    <string name="credit_card">Credit card</string>
    <string name="utilities">Utilities</string>
    <string name="food">Food</string>
    <string name="car_payment">Car payment</string>
    <string name="personal">Personal</string>
    <string name="activities">Activities</string>
    <string name="other_expense">Other expense</string>
    <string name="filter">Filter</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="this_year">This year</string>
    <string name="trends">Trends</string>
    <string name="overview">Overview</string>
    <string name="step_continue">Continue</string>
    <string name="step_finish">Finish</string>
    <string name="step_cancel">Cancel</string>

    <string-array name="report_activity_category_spinner">
        <item>Salary</item>
        <item>Rental income</item>
        <item>Interest</item>
        <item>Gifts</item>
        <item>Other income</item>
        <item>Taxes</item>
        <item>Mortgage</item>
        <item>Credit card</item>
        <item>Utilities</item>
        <item>Food</item>
        <item>Car payment</item>
        <item>Personal</item>
        <item>Activities</item>
        <item>Other expense</item>
    </string-array>

    <string-array name="report_activity_currency_spinner">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>UAH</item>
        <item>RUB</item>
        <item>BTC</item>
        <item>PLN</item>
        <item>KRW</item>

    </string-array>

    <string-array name="budget_period_spinner">
        <item>Weekly</item>
        <item>Monthly</item>

    </string-array>

    <string-array name="budget_card_periods">
        <item>This week</item>
        <item>Last week</item>
        <item>2 weeks ago</item>

        <item>This month</item>
        <item>Last month</item>
        <item>2 months ago</item>

    </string-array>

    <string-array name="year_array">
        <item>year</item>
        <item>years</item>
        <item>years</item>
    </string-array>
    <string-array name="month_array">
        <item>less than one month</item>
        <item>month</item>
        <item>months</item>
        <item>months</item>
    </string-array>

    <string-array name="bank_integration_countries">
        <item>Ukraine</item>
    </string-array>
    <string-array name="bank_integration_banks_ukraine">
        <item>Raiffeisen Bank Aval</item>
        <item>Unicredit Bank</item>
        <item>State Savings Bank</item>
        <item>Ukrsibbank</item>
    </string-array>
    <!-- <string-array name="report_activity_recurs_spinner">
        <item>Never</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every 3 month</item>
    </string-array>-->

    <string-array name="category_type_spinner">
        <item>Income</item>
        <item>Expense</item>

    </string-array>

    <string name="title_activity_settings">Settings</string>


    <string name="line">Line</string>
    <string name="period">Period</string>
    <string name="value">Value</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete entry</string>
    <string name="delete_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="share">Share</string>
    <string name="daily_reminder_title">Smart Wallet daily reminder</string>
    <string name="daily_reminder_text">Submit your finance activity</string>
    <string name="weekly_reminder_text">Your weekly report is ready</string>
    <string name="document_date">Document date</string>
    <string name="default_currency">Default currency</string>

    <!-- Showcase text-->
    <string name="action_filter">Filter data by period</string>
    <string name="got_it">Got it</string>
    <string name="document_share">Export summary report data into other applications</string>
    <string name="ok">OK</string>
    <string name="action_line">Select chart type to be shown</string>
    <string name="history_is_empty">History is empty&#8230;</string>
    <string name="no_network_title">No network</string>
    <string name="no_network_message">Can\'t connect to internet</string>
    <string name="permission_required">Permission required</string>
    <string name="set_value">Please set value</string>
    <string name="set_non_zero_value">Please set non-zero value</string>
    <string name="duplicate_entry">Category is already used</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit">Editor</string>
    <string name="balance">Balance</string>
    <string name="income_is_empty">Income is empty. Press (+) to create data</string>
    <string name="expense_is_empty">Expense is empty. Press (+) to create data</string>
    <string name="no_data_to_show">No data to display&#8230;</string>
    <string name="create_budget">Create budget</string>
    <string name="my_budget">My Budget</string>
    <string name="budget_is_empty">Budget is empty&#8230;</string>
    <string name="budget_exceeded">Budget exceeded by</string>
    <string name="edit_budget">Edit budget</string>
    <string name="estimated_balance">Expected balance</string>
    <string name="budget_showcase">Create budget and track execution</string>
    <string name="goals_is_empty">Goal is not created yet or your balance is very low</string>
    <string name="create_goal">Create goal</string>
    <string name="my_goal">My Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="goal_disclaimer">This is estimated value only based on your submitted data</string>
    <string name="goal_card_title">Time left:</string>
    <string name="complete">Complete</string>
    <string name="goals_congrats">Congratulations! You have achieved the goal! Try new one</string>
    <string name="goal_showcase">Create your goal and Smart Wallet will automatically calculate time you need to achieve it.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="password_match">Passwords should match</string>
    <string name="enter_password">Please enter password</string>
    <string name="short_password">Password must be at least 6 symbols</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_created">Password was successfully created</string>
    <string name="password_changed">Password was successfully changed</string>
    <string name="password_removed">Password was successfully removed</string>
    <string name="password_not_set">Password is not set</string>
    <string name="password_set">Password is set. To remove password, enter current password and leave other fields empty.</string>
    <string name="select_country">Select country</string>
    <string name="select_bank">Select bank</string>
    <string name="check">Check</string>
    <string name="check_successful">Check successful</string>
    <string name="check_unsuccessful">Check unsuccessful</string>
    <string name="raiffeisen_bank_aval_integration_description">For successful integration you must have SMS banking enabled</string>
    <string name="wrong_card_number">Wrong card number</string>
    <string name="wrong_account_number">Wrong account number</string>
    <string name="raiffeisen_bank_aval_integration_card_number">Enter last 8 digits of your card number</string>
    <string name="raiffeisen_bank_aval_integration_account_number">Enter your account number (only for salary cards)</string>
    <string name="oschadbank_bank_aval_integration_account_number">Enter your account number (optional)</string>
    <string name="refill">Refill</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="pending_operation">Pending operation</string>
    <string name="download_smart_wallet">Download Smart Wallet</string>
    <string name="refer_text">I\'ve been using Smart Wallet and you should try it.</string>
    <string name="ukrsotsbank_integration_card_number">Enter the first and last 4 digits of your card number</string>
    <string name="search_hint">Search in activity</string>
    <string name="search_history">Search operations by date, categories and amounts</string>
    <string name="create_account">Create wallet</string>
    <string name="my_account">My wallet</string>
    <string name="main_wallet">Main Wallet</string>
    <string name="account_exists">Wallet with such name already exists</string>
    <string name="transfer">Transfer</string>
    <string name="select_account">Select wallet</string>
    <string name="account_removed">Wallet was successfully removed</string>
    <string name="no_accounts">You have no available wallets</string>
    <string name="my_category">My Category</string>
    <string name="create_category">Create category</string>
    <string name="category_exists">Category with such name already exists</string>
    <string name="wrong_name">Wrong name</string>
    <string name="select_category">Select category</string>
    <string name="wipe_data">Wipe data</string>
    <string name="wipe_data_message">All wallet data will be removed</string>
    <string name="data_removed">Data was successfully removed</string>
    <string name="details_view">Click on card to see transactions in details</string>
    <string name="show">Show</string>
    <string name="weekly_report_from_till">Report from %1$s till %2$s</string>
    <string name="weekly_report_summary_amazing">Your week was amazing. Well done!</string>
    <string name="weekly_report_summary_bad">You have spent a lot this week</string>
    <string name="weekly_report_summary_general">Your weekly summary</string>
    <string name="weekly_report">Weekly report</string>
    <string name="general_information">Summary</string>
    <string name="top_transactions">Top transactions</string>
    <string name="error">Error</string>
    <string name="comment">Comment</string>
    <string name="invitation_cta">Try it</string>


</resources>