<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rbsoftware.pfm.personalfinancemanager.banking.NewUkrsotsBankIntegration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raiffeisen_bank_aval_integration_description" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ukrsotsbank_integration_card_number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/bank_integration_card_number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center"
            android:hint="1111"
            android:inputType="numberDecimal"
            android:maxLength="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="**** ****"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/bank_integration_card_number_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center"
            android:hint="4444"
            android:inputType="numberDecimal"
            android:maxLength="4" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/raiffeisen_bank_aval_integration_account_number" />

    <EditText
        android:id="@+id/bank_integration_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:gravity="center"
        android:hint="01234567891234"
        android:inputType="numberDecimal"
        android:maxLength="14" />

    <Button
        android:id="@+id/bank_integration_check"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:text="@string/check"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


</LinearLayout>
